<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_id">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="35dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/enter_item"></TextView>

            <EditText
                android:id="@+id/groceryItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:hint="@string/hint_item"
                android:textSize="35sp"
                android:textStyle="italic"></EditText>

            <EditText
                android:id="@+id/qty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/groceryItem"
                android:layout_marginTop="15dp"
                android:hint="@string/quantitiy_hint"></EditText>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/qty"
                android:backgroundTint="#F60606"
                android:text="@string/save_title"
                android:textColor="#FFFFFF"
                android:id="@+id/saveButton"
                android:layout_marginTop="15dp"
                android:textStyle="bold"></Button>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>




</LinearLayout>